TWINS-836: datalist option + twinfield + twinlink load pattern refactoring. TwinFieldStoragePointedHead optimization (#1043)